--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Шапка -->
     <header class="header">
       <nav>
-        <a class="logo" href="/"><span class="logo-color">Web</span>Studio</a>
+        <a class="logo link" href="/"><span class="logo-color">Web</span>Studio</a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link current">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -113,7 +113,7 @@
     <!-- Подвал -->
     <footer class="footer">
       <div>
-        <a href="/" class="footer-logo"><span class="logo-color">Web</span>Studio</a>
+        <a href="/" class="footer-logo link"><span class="logo-color">Web</span>Studio</a>
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="footer-contacts list">
           <li>
